updating readme and intro in report

--- a/notebooks/sales_analysis.ipynb
+++ b/notebooks/sales_analysis.ipynb
@@ -7,9 +7,9 @@
    "source": [
     "# AdventureWorks - Sales Analysis\n",
     "\n",
-    "In this sales analysis, data from the AdventureWorks2025 database is used through SQL Server. Python is used to retrieve the data from the server and create visualisations to facilitate the analysis. The data is primarily processed and transformed in SQL - however, where necessary, additional transformations are performed in Python for visualisation purposes.\n",
+    "This sales analysis uses data from the AdventureWorks2025 database, accessed through SQL Server. Python is employed to retrieve the data and generate visualizations that support a clear and insightful analysis. While the majority of data processing and transformation is performed in SQL, additional transformations are applied in Python when needed to enhance the visualizations.\n",
     "\n",
-    "The analysis presented in this *Jupyter Notebook* is based on a set of predefined business questions, as well as one additional in-depth analysis (also predefined)."
+    "The analysis, presented in this *Jupyter Notebook*, addresses a series of predefined business questions, alongside one in-depth, supplementary investigation designed to provide deeper insights."
    ]
   },
   {
@@ -17,7 +17,7 @@
    "id": "5af10430",
    "metadata": {},
    "source": [
-    "## Setup (Code)"
+    "## Code setup"
    ]
   },
   {
@@ -551,7 +551,7 @@
    "id": "46503df5",
    "metadata": {},
    "source": [
-    "### Visualisation 6 - Total sales and Customer per Region\n",
+    "### Total sales and customer per region\n",
     "\n",
     "This visualisation analyses how sales differ between regions and how many unique customers there are in each region. The figures are aggregated over the time period of May 2022 to June 2025. \n",
     "\n",
@@ -792,6 +792,14 @@
     "- The highest AOV overall is observed for store customers in the Southwest, US, making this the dominant region and customer type combination.\n",
     "\n",
     "- Regional differences may reflect factors such as local pricing, bulk ordering behavior, and customer segment composition."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "299c6c4b",
+   "metadata": {},
+   "source": [
+    "### In-depth investigation - "
    ]
   }
  ],
