Final final version 2

--- a/notebooks/sales_analysis.ipynb
+++ b/notebooks/sales_analysis.ipynb
@@ -1312,7 +1312,15 @@
     "\n",
     "- The exit–invest analysis shows that recommended investment opportunities are concentrated in Bikes. However, this category also contains a substantial number of products recommended for exit, alongside Components, which holds the highest number of exit-classified products.\n",
     "\n",
-    "- Products with high sales volumes but low revenue per unit are exclusively found in Clothing and Accessories. This aligns with these categories’ overall classification as “Loser” products, characterised by low sales value and low margins."
+    "- Products with high sales volumes but low revenue per unit are exclusively found in Clothing and Accessories. This aligns with these categories’ overall classification as “Loser” products, characterised by low sales value and low margins.\n",
+    "\n",
+    "### Top 3 recommendations\n",
+    "\n",
+    "- **Prioritise investment in the Bike category:** Focus resources on high-performing bike models, as Bikes consistently deliver the highest revenue, margins, and investment opportunities.\n",
+    "\n",
+    "- **Streamline the Components assortment:** Reduce or exit underperforming component products to improve portfolio efficiency and shift focus toward higher-value items.\n",
+    "\n",
+    "- **Reposition Clothing and Accessories:** Address low revenue and margin performance by reviewing pricing, discount strategies, and using these products primarily as complementary or bundled offerings rather than core revenue drivers."
    ]
   }
  ],
